--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,18 +7,18 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #0099FF;
+  --ifm-color-primary-dark: #0081d8;
+  --ifm-color-primary-darker: #006ab1;
+  --ifm-color-primary-darkest: #003b62;
+  --ifm-color-primary-light: #27a9ff;
+  --ifm-color-primary-lighter: #76c8ff;
+  --ifm-color-primary-lightest: #9dd8ff;
   --ifm-code-font-size: 95%;
 }
 
 .docusaurus-highlight-code-line {
-  background-color: rgb(72, 77, 91);
+  background-color: linear-gradient( 40deg, #0FECF9 0%, #6B3DE5 50%, #fa78c9 100% );
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
